# qa_guru_python_1_15

./: .gitignore  README.md
with_pipenv2/: Pipfile
with_poetry/: pyproject.toml
