[tool.pytest.ini_options]
addopts = "-rfEX -p pytester --strict-markers"

[tool.poetry]
name = "with_poetry"
version = "0.1.0"
description = ""
authors = ["skhomuti <skhomuti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
allure-pytest = "^2.9.45"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
